force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ApprovalContextType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalContextType__c</fullName>
    <defaultValue>"Single"</defaultValue>
    <description>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</description>
    <inlineHelpText>The approval context type associated with the process for the object

Valid Values are:
=============
Single
Multiple</inlineHelpText>
    <label>Approval Context Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>