force-app/main/default/objects/Apttus_Approval__ApprovalsCustomConfig__c/fields/Apttus_Approval__ApprovalGroupStatusField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApprovalGroupStatusField__c</fullName>
    <description>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to "Approval_Group_Status__c".</description>
    <inlineHelpText>The API name of the approval group status field. Only applicable to custom context objects. If not specified, defaults to "Approval_Group_Status__c".</inlineHelpText>
    <label>Approval Group Status Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>